# olot

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/install-skopeo/: action.yml
.github/workflows/: build.yaml  e2e.yaml  release.yaml
doc/: feat-119-docker-distribution-format-support.md
docs/: analysis-165-oras-pull-mtime.md  feat-119-docker-distribution-format-support.md  feat-152-layer-content-annotations.md  feat-layer-content-annotations.md
e2e/: deploy_kind_cluster.sh  isvc-modelcar.yaml
olot/: basics.py  cli.py  constants.py  embedded_oci_layout.py  enums.py  oci_artifact.py
olot/backend/: oras_cp.py  oras_py.py  skopeo.py
olot/dockerdist/: convert.py
olot/oci/: oci_common.py  oci_config.py  oci_image_index.py  oci_image_layout.py  oci_image_manifest.py  oci_utils.py
olot/utils/: files.py  types.py  validation.py
scripts/: test_oras_py.py
tests/: basic_test.py  common.py  conftest.py  embedded_oci_layout_test.py  test_oci.py
tests/backend/: test_oras_cp.py  test_oras_py.py  test_skopeo.py
tests/data/: hello.md
tests/data/dockerdist1/: README.md  index.json
tests/data/files-and-directory/: configuration_nemotron_h.py
tests/data/lmeh/: samples_gsm8k_2025-04-30T18-24-41.082644.jsonl
tests/data/lmeh2/: README.md
tests/data/ociartifact1/: README.md  index.json
tests/data/ocilayout1/: index.json
tests/data/ocilayout2/: README.md  index.json
tests/data/ocilayout3/: README.md  index.json
tests/data/ocilayout4/: README.md  index.json
tests/data/ocilayout5/: README.md  index.json
tests/data/sample-model/: README.md
tests/dockerdist/: convert_test.py
tests/modelpack/: model_config_test.py
tests/oci/: oci_artifact_test.py  oci_common_test.py  oci_image_index_test.py  oci_image_layout_test.py  oci_utils_test.py  test_oci.py
tests/utils/: files_test.py  types_test.py  validation_test.py
(+3 files in other folders)
