[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "olot"
version = "1.0.1"
description = "oci layers on top"
authors = [
    {name = "tarilabs", email = "matteo.mortari@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7,<9",
    "pydantic>=2.10.3,<3",
]

[project.optional-dependencies]
modelcar-base-image = ["modelcar-base-image>=0.1.0,<0.2"]
oras-py = ["oras>=0.2.42"]

[project.scripts]
olot = "olot.cli:cli"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<10",
    "ruff>=0.6.1,<0.16.0",
    "mypy>=1.11.1,<2",
    "docker>=7.1.0,<8",
]


[tool.setuptools.packages.find]
include = ["olot*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e_skopeo: end-to-end testing with skopeo",
    "e2e_oras: end-to-end testing with oras",
    "e2e_oras_py: end-to-end testing with oras-py (Python library)",
]


[tool.ruff]
target-version = "py310"
respect-gitignore = true


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",
] # exclude https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/#notebook-behavior from linting, especially for demos.


[tool.mypy]
python_version = "3.10"
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "oras.*"
ignore_missing_imports = true
follow_untyped_imports = true
